// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DEFAULT_CONFIG > matches snapshot 1`] = `
{
  "enabled": true,
  "filesystem": {
    "allowWrite": [
      ".",
      "/tmp",
    ],
    "denyRead": [
      "~/.ssh",
      "~/.aws",
      "~/.gnupg",
    ],
    "denyWrite": [
      ".env",
      ".env.*",
      "*.pem",
      "*.key",
      "**/node_modules/**",
      "**/vendor/**",
      "**/__pycache__/**",
      "**/.venv/**",
      "**/.git/**",
    ],
  },
  "mode": "sandboxed",
  "network": {
    "allowedDomains": [
      "npmjs.org",
      "*.npmjs.org",
      "registry.npmjs.org",
      "registry.yarnpkg.com",
      "pypi.org",
      "*.pypi.org",
      "github.com",
      "*.github.com",
      "api.github.com",
      "raw.githubusercontent.com",
      "kagi.com",
      "*.kagi.com",
    ],
    "deniedDomains": [],
  },
}
`;

exports[`deepMerge > merges filesystem (shallow) 1`] = `
{
  "enabled": true,
  "filesystem": {
    "allowWrite": [
      "/tmp",
    ],
    "denyRead": [
      "/secret",
    ],
    "denyWrite": [
      "*.key",
    ],
  },
  "mode": "sandboxed",
  "network": {
    "allowedDomains": [
      "npmjs.org",
      "*.npmjs.org",
      "registry.npmjs.org",
      "registry.yarnpkg.com",
      "pypi.org",
      "*.pypi.org",
      "github.com",
      "*.github.com",
      "api.github.com",
      "raw.githubusercontent.com",
      "kagi.com",
      "*.kagi.com",
    ],
    "deniedDomains": [],
  },
}
`;

exports[`deepMerge > merges network (shallow) 1`] = `
{
  "enabled": true,
  "filesystem": {
    "allowWrite": [
      ".",
      "/tmp",
    ],
    "denyRead": [
      "~/.ssh",
      "~/.aws",
      "~/.gnupg",
    ],
    "denyWrite": [
      ".env",
      ".env.*",
      "*.pem",
      "*.key",
      "**/node_modules/**",
      "**/vendor/**",
      "**/__pycache__/**",
      "**/.venv/**",
      "**/.git/**",
    ],
  },
  "mode": "sandboxed",
  "network": {
    "allowedDomains": [
      "custom.com",
    ],
    "deniedDomains": [
      "evil.com",
    ],
  },
}
`;

exports[`deepMerge > overrides enabled 1`] = `
{
  "enabled": false,
  "filesystem": {
    "allowWrite": [
      ".",
      "/tmp",
    ],
    "denyRead": [
      "~/.ssh",
      "~/.aws",
      "~/.gnupg",
    ],
    "denyWrite": [
      ".env",
      ".env.*",
      "*.pem",
      "*.key",
      "**/node_modules/**",
      "**/vendor/**",
      "**/__pycache__/**",
      "**/.venv/**",
      "**/.git/**",
    ],
  },
  "mode": "sandboxed",
  "network": {
    "allowedDomains": [
      "npmjs.org",
      "*.npmjs.org",
      "registry.npmjs.org",
      "registry.yarnpkg.com",
      "pypi.org",
      "*.pypi.org",
      "github.com",
      "*.github.com",
      "api.github.com",
      "raw.githubusercontent.com",
      "kagi.com",
      "*.kagi.com",
    ],
    "deniedDomains": [],
  },
}
`;

exports[`deepMerge > overrides mode 1`] = `
{
  "enabled": true,
  "filesystem": {
    "allowWrite": [
      ".",
      "/tmp",
    ],
    "denyRead": [
      "~/.ssh",
      "~/.aws",
      "~/.gnupg",
    ],
    "denyWrite": [
      ".env",
      ".env.*",
      "*.pem",
      "*.key",
      "**/node_modules/**",
      "**/vendor/**",
      "**/__pycache__/**",
      "**/.venv/**",
      "**/.git/**",
    ],
  },
  "mode": "ask",
  "network": {
    "allowedDomains": [
      "npmjs.org",
      "*.npmjs.org",
      "registry.npmjs.org",
      "registry.yarnpkg.com",
      "pypi.org",
      "*.pypi.org",
      "github.com",
      "*.github.com",
      "api.github.com",
      "raw.githubusercontent.com",
      "kagi.com",
      "*.kagi.com",
    ],
    "deniedDomains": [],
  },
}
`;

exports[`deepMerge > returns base when overrides are empty 1`] = `
{
  "enabled": true,
  "filesystem": {
    "allowWrite": [
      ".",
      "/tmp",
    ],
    "denyRead": [
      "~/.ssh",
      "~/.aws",
      "~/.gnupg",
    ],
    "denyWrite": [
      ".env",
      ".env.*",
      "*.pem",
      "*.key",
      "**/node_modules/**",
      "**/vendor/**",
      "**/__pycache__/**",
      "**/.venv/**",
      "**/.git/**",
    ],
  },
  "mode": "sandboxed",
  "network": {
    "allowedDomains": [
      "npmjs.org",
      "*.npmjs.org",
      "registry.npmjs.org",
      "registry.yarnpkg.com",
      "pypi.org",
      "*.pypi.org",
      "github.com",
      "*.github.com",
      "api.github.com",
      "raw.githubusercontent.com",
      "kagi.com",
      "*.kagi.com",
    ],
    "deniedDomains": [],
  },
}
`;

exports[`formatEditDiff > handles empty edits array 1`] = `""`;

exports[`formatEditDiff > handles missing edits 1`] = `""`;

exports[`formatEditDiff > handles multiple edits separated by blank line 1`] = `
"- a
+ b

- c
+ d
"
`;

exports[`formatEditDiff > shows addition 1`] = `
"+ bar
"
`;

exports[`formatEditDiff > shows change 1`] = `
"- old
+ new
"
`;

exports[`formatEditDiff > shows removal 1`] = `
"- foo
"
`;

exports[`formatEditDiff > shows unchanged lines with context 1`] = `
"  keep
- change
+ changed
"
`;

exports[`formatEditDiff > truncates after 10 lines with summary 1`] = `
"- line 0
- line 1
- line 2
- line 3
- line 4
- line 5
- line 6
- line 7
- line 8
- line 9
... (10 more lines)
"
`;

exports[`getSandboxRuntimeConfigForMode > ask mode locks down filesystem but uses config network 1`] = `
{
  "filesystem": {
    "allowWrite": [],
    "denyRead": [],
    "denyWrite": [],
  },
  "network": {
    "allowedDomains": [
      "everything.com",
    ],
    "deniedDomains": [],
  },
}
`;

exports[`getSandboxRuntimeConfigForMode > preserves enableWeakerNestedSandbox from config 1`] = `
{
  "enableWeakerNestedSandbox": true,
  "filesystem": {
    "allowWrite": [
      ".",
      "/tmp",
    ],
    "denyRead": [
      "~/.ssh",
      "~/.aws",
      "~/.gnupg",
    ],
    "denyWrite": [
      ".env",
      ".env.*",
      "*.pem",
      "*.key",
      "**/node_modules/**",
      "**/vendor/**",
      "**/__pycache__/**",
      "**/.venv/**",
      "**/.git/**",
    ],
  },
  "network": {
    "allowedDomains": [
      "npmjs.org",
      "*.npmjs.org",
      "registry.npmjs.org",
      "registry.yarnpkg.com",
      "pypi.org",
      "*.pypi.org",
      "github.com",
      "*.github.com",
      "api.github.com",
      "raw.githubusercontent.com",
      "kagi.com",
      "*.kagi.com",
    ],
    "deniedDomains": [],
  },
}
`;

exports[`getSandboxRuntimeConfigForMode > preserves ignoreViolations from config 1`] = `
{
  "filesystem": {
    "allowWrite": [
      ".",
      "/tmp",
    ],
    "denyRead": [
      "~/.ssh",
      "~/.aws",
      "~/.gnupg",
    ],
    "denyWrite": [
      ".env",
      ".env.*",
      "*.pem",
      "*.key",
      "**/node_modules/**",
      "**/vendor/**",
      "**/__pycache__/**",
      "**/.venv/**",
      "**/.git/**",
    ],
  },
  "ignoreViolations": {
    "bash": [
      "~/.ssh",
    ],
  },
  "network": {
    "allowedDomains": [
      "npmjs.org",
      "*.npmjs.org",
      "registry.npmjs.org",
      "registry.yarnpkg.com",
      "pypi.org",
      "*.pypi.org",
      "github.com",
      "*.github.com",
      "api.github.com",
      "raw.githubusercontent.com",
      "kagi.com",
      "*.kagi.com",
    ],
    "deniedDomains": [],
  },
}
`;

exports[`getSandboxRuntimeConfigForMode > returns config values for sandboxed mode 1`] = `
{
  "filesystem": {
    "allowWrite": [
      ".",
      "/tmp",
    ],
    "denyRead": [
      "~/.ssh",
      "~/.aws",
      "~/.gnupg",
    ],
    "denyWrite": [
      ".env",
      ".env.*",
      "*.pem",
      "*.key",
      "**/node_modules/**",
      "**/vendor/**",
      "**/__pycache__/**",
      "**/.venv/**",
      "**/.git/**",
    ],
  },
  "network": {
    "allowedDomains": [
      "npmjs.org",
      "*.npmjs.org",
      "registry.npmjs.org",
      "registry.yarnpkg.com",
      "pypi.org",
      "*.pypi.org",
      "github.com",
      "*.github.com",
      "api.github.com",
      "raw.githubusercontent.com",
      "kagi.com",
      "*.kagi.com",
    ],
    "deniedDomains": [],
  },
}
`;

exports[`getSandboxRuntimeConfigForMode > returns locked-down filesystem for ask mode 1`] = `
{
  "filesystem": {
    "allowWrite": [],
    "denyRead": [],
    "denyWrite": [],
  },
  "network": {
    "allowedDomains": [
      "npmjs.org",
      "*.npmjs.org",
      "registry.npmjs.org",
      "registry.yarnpkg.com",
      "pypi.org",
      "*.pypi.org",
      "github.com",
      "*.github.com",
      "api.github.com",
      "raw.githubusercontent.com",
      "kagi.com",
      "*.kagi.com",
    ],
    "deniedDomains": [],
  },
}
`;

exports[`modeStatusText > matches snapshot for all modes 1`] = `
{
  "ask": "🔐 Ask mode: confirm writes, read-only sandbox (/sandbox)",
  "sandboxed": "🎪 Sandboxed mode: play within boundaries (/sandbox)",
  "yolo": "🚀 YOLO mode: no restrictions, no questions",
}
`;

exports[`select dialog options > BYPASS_OPTIONS matches snapshot 1`] = `
{
  "allow": "✅ Allow — run outside sandbox",
  "deny": "❌ Deny",
  "options": [
    "✅ Allow — run outside sandbox",
    "❌ Deny",
  ],
}
`;

exports[`select dialog options > CONFIRM_OPTIONS matches snapshot 1`] = `
{
  "allow": "✅ Allow",
  "deny": "❌ Deny",
  "options": [
    "✅ Allow",
    "❌ Deny",
  ],
}
`;

exports[`shouldConfirmTool > matches snapshot 1`] = `
{
  "ask": {
    "bash": false,
    "edit": true,
    "find": false,
    "grep": false,
    "ls": false,
    "my_custom_tool": false,
    "read": false,
    "write": true,
  },
  "sandboxed": {
    "bash": false,
    "edit": false,
    "find": false,
    "grep": false,
    "ls": false,
    "my_custom_tool": false,
    "read": false,
    "write": false,
  },
  "yolo": {
    "bash": false,
    "edit": false,
    "find": false,
    "grep": false,
    "ls": false,
    "my_custom_tool": false,
    "read": false,
    "write": false,
  },
}
`;
